syntax = "proto3";

package tunnel;

option go_package = "github.com/cosysn/devpod-provider-wsl/pkg/grpc/proto";

service DevPodWSLService {
    rpc Start(StartRequest) returns (StartResponse);
    rpc Stop(StopRequest) returns (StopResponse);
    rpc Exec(stream ExecRequest) returns (stream ExecResponse);
    rpc Stdin(stream Data) returns (Empty);
    rpc Stdout(Empty) returns (stream Data);
    rpc Stderr(Empty) returns (stream Data);
    rpc Status(Empty) returns (AgentStatus);
    rpc Upload(stream Chunk) returns (UploadResponse);
}

message StartRequest {
    string command = 1;
    string workdir = 2;
    map<string, string> env = 3;
}

message StartResponse {
    int32 pid = 1;
}

message StopRequest {
    int32 pid = 1;
}

message StopResponse {
    int32 exit_code = 1;
}

message ExecRequest {
    oneof data {
        string input = 1;
        bool eof = 2;
    }
}

message ExecResponse {
    bytes stdout = 1;
    bytes stderr = 2;
    int32 exit_code = 3;
    bool done = 4;
}

message Data {
    bytes content = 1;
}

message Empty {}

message AgentStatus {
    bool running = 1;
    int32 pid = 2;
}

message Chunk {
    string path = 1;
    bytes content = 2;
    bool eof = 3;
}

message UploadResponse {
    bool success = 1;
}
